animation ball optimization

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div class="room">
-        <div class="ball"></div>
+        <div class="ball">
+            <div class="ball-inside"></div>
+        </div>
         <div class="spring"></div>
         <div class="column"></div>
         <div class="panel">
